// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className=""
>
  <header
    className="MuiPaper-root-134 MuiPaper-elevation4-140 MuiAppBar-root-126 MuiAppBar-positionFixed-127 MuiAppBar-colorPrimary-132 mui-fixed"
  >
    <div
      className="MuiToolbar-root-161 MuiToolbar-regular-163 MuiToolbar-gutters-162 APIComponent-nowrap-120"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-171 MuiIconButton-root-165 MuiIconButton-colorInherit-166 APIComponent-menuButton-121"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-170"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-174"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-181"
        />
      </button>
      <h2
        className="MuiTypography-root-188 MuiTypography-title-194 MuiTypography-colorInherit-207 APIComponent-flex-119"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-spacer-123"
  />
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className=""
>
  <header
    className="MuiPaper-root-134 MuiPaper-elevation4-140 MuiAppBar-root-126 MuiAppBar-positionStatic-130 MuiAppBar-colorPrimary-132"
  >
    <div
      className="MuiToolbar-root-161 MuiToolbar-regular-163 MuiToolbar-gutters-162 APIComponent-nowrap-120"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-171 MuiIconButton-root-165 MuiIconButton-colorInherit-166 APIComponent-menuButton-121"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-170"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-174"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-181"
        />
      </button>
      <h2
        className="MuiTypography-root-188 MuiTypography-title-194 MuiTypography-colorInherit-207 APIComponent-flex-119"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-pad-124"
  />
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className=""
>
  <header
    className="MuiPaper-root-134 MuiPaper-elevation4-140 MuiAppBar-root-126 MuiAppBar-positionFixed-127 MuiAppBar-colorPrimary-132 mui-fixed"
  >
    <div
      className="MuiToolbar-root-161 MuiToolbar-regular-163 MuiToolbar-gutters-162 APIComponent-nowrap-120"
    >
      <button
        aria-label="Back"
        className="MuiButtonBase-root-171 MuiIconButton-root-165 MuiIconButton-colorInherit-166 APIComponent-menuButton-121"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-170"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-174"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-181"
        />
      </button>
      <h2
        className="MuiTypography-root-188 MuiTypography-title-194 MuiTypography-colorInherit-207 APIComponent-flex-119"
      >
        Test
      </h2>
      <div>
        <button>
          test
        </button>
      </div>
    </div>
  </header>
  <div
    className="APIComponent-spacer-123"
  />
</div>
`;
